@@ -1,3 +1,8 @@
+2010-12-10  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amcheck-device.pl: Fix possible hang if
+	  Amanda::MainLoop::quit is called before Amanda::MainLoop::run.
+	* perl/Amanda/Changer.pm: Return the error.
+
 2010-12-09  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/driver.c: Check if taper is flushing something before
 	  moving a dle to directq.
